# starkpulse-frontend

.claude/: settings.json
.github/workflows/: backend.yml  data-processing.yml  onchain.yml
apps/backend/: .env.example  SOROBAN_EVENT_INGESTION.md  package-lock.json  package.json  pnpm-workspace.yaml  tsconfig.json
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/cache/: cache.service.spec.ts  cache.service.ts
apps/backend/src/config/: config.controller.ts  (+2 more)
apps/backend/test/: app.e2e-spec.ts
apps/data-processing/src/: main.py
apps/data-processing/tests/: test_news_fetcher.py  test_onchain_entity_persistence.py  test_price_fetcher.py  test_stellar_fetcher.py
apps/mobile/app/: _layout.tsx
apps/mobile/contexts/: WalletContext.tsx
apps/mobile/expo/: tsconfig.base.json
apps/mobile/lib/: crowdfund.ts  grants.ts
apps/onchain/: CROSS_CONTRACT_NOTIFICATIONS_IMPLEMENTATION.md  Cargo.toml  IMPLEMENTATION_DETAILS_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE_NOTIFICATIONS_YIELD.md  QUICK_REFERENCE.md  YIELD_VAULT_IMPLEMENTATION.md
apps/onchain/contracts/notification_broker/: Cargo.toml
apps/onchain/contracts/notification_broker/src/: errors.rs  events.rs  lib.rs  storage.rs
apps/webapp/: package.json
apps/webapp/app/: providers.tsx
apps/webapp/components/: TransactionReceiptModal.tsx  config-error-banner.test.tsx  config-error-banner.tsx
apps/webapp/contexts/: StellarConfigContext.test.tsx  StellarConfigContext.tsx
apps/webapp/types/: stellar-config.ts
document/: LOCAL_SETUP.md
scripts/: deploy.ts  utils.ts
(+141 files in other folders)
