[package]
name = "notification-broker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "=21.5.1"
soroban-sdk-macros = "=21.5.1"
notification-interface = { path = "../notification_interface" }
reentrancy-guard = { path = "../reentrancy-guard" }

[dev-dependencies]
soroban-sdk = { version = "=21.5.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
